upgrade wrapper and java versions